@@ -3,3 +3,4 @@
 * Remove old items from the database
 * bugfix: atom feed item links should point to the item show view
 * bugfix: sequel-1.4.0 have eager loading by default
+* bugfix: The 'updated' is alwais Time.now in the atom feed
